Changes in result and BP css

--- a/results.html
+++ b/results.html
@@ -2,28 +2,29 @@
 <html lang="sv">
 
 <head>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style BP.css" rel="stylesheet">
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Results</title>
 </head>
 
 <body>
-        <nav>
-        
-                <div class="topnav-left">
-                    <img src="img/dice.jpg" alt="Yatzy logga"> 
-                    <span class="navlinks">
-                        <a href="starterpage.html">Start</a>
-                        <a href="yatzy.html">Nytt spel</a>
-                        <a class="active"href="results.html">Tidigare resultat</a>
-                        <a href="profile.html">Min spelprofil</a>
-                    </span>
-                   
-                </div>
-                <div class="topnav-right">
-                    <a href="index.html"><button>Logga ut</button></a>
-                </div>
-            </nav>
+    <nav>
+
+        <div class="topnav-left">
+            <img src="img/dice.jpg" alt="Yatzy logga">
+            <span class="navlinks">
+                <a href="starterpage.html">Start</a>
+                <a href="yatzy.html">Nytt spel</a>
+                <a class="active" href="results.html">Tidigare resultat</a>
+                <a href="profile.html">Min spelprofil</a>
+            </span>
+
+        </div>
+        <div class="topnav-right">
+            <a href="index.html"><button>Logga ut</button></a>
+        </div>
+    </nav>
     <h1>Resultat från tidigare omgångar</h1>
 
     <h2>Omgång 1</h2>
