creation of diceboxes

--- a/yatzy2.html
+++ b/yatzy2.html
@@ -183,7 +183,6 @@
                         <td><input type="number"></td>
                     </tr>
                 </table>
-                <button id="calc">Beräkna</button>
             </div>
 
             <div class="col-lg-4 diceArea">
@@ -209,6 +208,18 @@
                         <button>Kasta tärningar: x3</button>
                     </div>
                 </div>
+                <div>
+                    <input id="dice1" class="dices" type="numbers">
+                    <input id="diceCheck1" type="checkbox">
+                    <input id="dice2" class="dices" type="numbers">
+                    <input id="diceCheck2" type="checkbox">
+                    <input id="dice3" class="dices" type="numbers">
+                    <input id="diceCheck3" type="checkbox">
+                    <input id="dice4" class="dices" type="numbers">
+                    <input id="diceCheck4" type="checkbox">
+                    <input id="dice5" class="dices" type="numbers">
+                    <input id="diceCheck5" type="checkbox">
+                </div>
             </div>
 
             <div class="col players">
@@ -228,7 +239,7 @@
         </div>
     </div>
     <div class="row">
-            <!-- <div>
+        <!-- <div>
                     Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a>
                     from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
                         title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
