--- a/yatzy2.html
+++ b/yatzy2.html
@@ -205,7 +205,7 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <button>Kasta tärningar: x3</button>
+                        <button id="throwDices">Kasta tärningar</button>
                     </div>
                 </div>
                 <div>
