resolved merge conflicts

--- a/yatzy2.html
+++ b/yatzy2.html
@@ -47,6 +47,8 @@
 
     <div class="container">
         <div class="row justify-content-center">
+
+            <!-- Yatzy Table -->
             <div class="col-lg-4">
                 <table>
                     <tr>
@@ -185,22 +187,27 @@
                 </table>
             </div>
 
-            <div class="col-lg-4 diceArea">
+            <div class="col-lg-4 diceArea align-items-stretch">
                 <div class="row">
-                    <div class="col">
+                    <div class="col-lg-4 d-flex justify-content-center">
                         <img src="img/dice2.png">
+                        <input type="checkbox">
                     </div>
-                    <div class="col">
+                    <div class="col-lg-4 d-flex justify-content-center">
                         <img src="img/dice3.png">
+                        <input type="checkbox">
                     </div>
-                    <div class="col">
+                    <div class="col-lg-4 d-flex justify-content-center">
                         <img src="img/dice4.png">
+                        <input type="checkbox">
                     </div>
-                    <div class="col">
+                    <div class="col-lg-6 d-flex justify-content-center">
                         <img src="img/dice5.png">
+                        <input type="checkbox">
                     </div>
-                    <div class="col">
+                    <div class="col-lg-6 d-flex justify-content-center">
                         <img src="img/dice6.png">
+                        <input type="checkbox">
                     </div>
                 </div>
                 <div class="row">
@@ -223,7 +230,7 @@
             </div>
 
             <div class="col players">
-                <div class="row justify-content-end">
+                <div class="row">
                     <img src="https://randomuser.me/api/portraits/men/46.jpg">
                 </div>
                 <div class="row">
