New dynamic score function and new html classes and IDs

--- a/yatzy2.html
+++ b/yatzy2.html
@@ -58,129 +58,129 @@
                     </tr>
                     <tr>
                         <td>Ettor</td>
-                        <td><input id="player1_ones" type="number" min="0" max="5"></td>
-                        <td><input type="number" min="0" max="5"></td>
-                        <td><input type="number" min="0" max="5"></td>
-                        <td><input type="number" min="0" max="5"></td>
+                        <td><input class="player1_upper" id="player1_ones" type="number" min="0" max="5"></td>
+                        <td><input class="player2_upper"id="player2_ones" type="number" min="0" max="5"></td>
+                        <td><input class="player3_upper" id="player3_ones" type="number" min="0" max="5"></td>
+                        <td><input class="player4_upper" id="player4_ones" type="number" min="0" max="5"></td>
                     </tr>
                     <tr>
                         <td>Tvåor</td>
-                        <td><input id="player1_twos" type="number" min="0" max="10" step="2"></td>
-                        <td><input type="number" min="0" max="10" step="2"></td>
-                        <td><input type="number" min="0" max="10" step="2"></td>
-                        <td><input type="number" min="0" max="10" step="2"></td>
+                        <td><input class="player1_upper" id="player1_twos" type="number" min="0" max="10" step="2"></td>
+                        <td><input class="player2_upper" id="player2_twos" type="number" min="0" max="10" step="2"></td>
+                        <td><input class="player3_upper" id="player3_twos" type="number" min="0" max="10" step="2"></td>
+                        <td><input class="player4_upper" id="player4_twos" type="number" min="0" max="10" step="2"></td>
                     </tr>
                     <tr>
                         <td>Treor</td>
-                        <td><input id="player1_threes" type="number" min="0" max="15" step="3"></td>
-                        <td><input type="number" min="0" max="15" step="3"></td>
-                        <td><input type="number" min="0" max="15" step="3"></td>
-                        <td><input type="number" min="0" max="15" step="3"></td>
+                        <td><input class="player1_upper" id="player1_threes" type="number" min="0" max="15" step="3"></td>
+                        <td><input class="player2_upper" id="player2_threes" type="number" min="0" max="15" step="3"></td>
+                        <td><input class="player3_upper" id="player3_threes" type="number" min="0" max="15" step="3"></td>
+                        <td><input class="player4_upper" id="player4_threes" type="number" min="0" max="15" step="3"></td>
                     </tr>
                     <tr>
                         <td>Fyror</td>
-                        <td><input id="player1_fours" type="number" min="0" max="20" step="4"></td>
-                        <td><input type="number" min="0" max="20" step="4"></td>
-                        <td><input type="number" min="0" max="20" step="4"></td>
-                        <td><input type="number" min="0" max="20" step="4"></td>
+                        <td><input class="player1_upper" id="player1_fours" type="number" min="0" max="20" step="4"></td>
+                        <td><input class="player2_upper" id="player2_fours" type="number" min="0" max="20" step="4"></td>
+                        <td><input class="player3_upper" id="player3_fours" type="number" min="0" max="20" step="4"></td>
+                        <td><input class="player4_upper" id="player4_fours" type="number" min="0" max="20" step="4"></td>
                     </tr>
                     <tr>
                         <td>Femmor</td>
-                        <td><input id="player1_fives" type="number" min="0" max="25" step="5"></td>
-                        <td><input type="number" min="0" max="25" step="5"></td>
-                        <td><input type="number" min="0" max="25" step="5"></td>
-                        <td><input type="number" min="0" max="25" step="5"></td>
+                        <td><input class="player1_upper" id="player1_fives" type="number" min="0" max="25" step="5"></td>
+                        <td><input class="player2_upper" id="player2_fives" type="number" min="0" max="25" step="5"></td>
+                        <td><input class="player3_upper" id="player3_fives" type="number" min="0" max="25" step="5"></td>
+                        <td><input class="player4_upper" id="player4_fives" type="number" min="0" max="25" step="5"></td>
                     </tr>
                     <tr>
                         <td>Sexor</td>
-                        <td><input id="player1_sixes" type="number" min="0" max="30" step="6"></td>
-                        <td><input type="number" min="0" max="30" step="6"></td>
-                        <td><input type="number" min="0" max="30" step="6"></td>
-                        <td><input type="number" min="0" max="30" step="6"></td>
+                        <td><input class="player1_upper" id="player1_sixes" type="number" min="0" max="30" step="6"></td>
+                        <td><input class="player2_upper" id="player2_sixes" type="number" min="0" max="30" step="6"></td>
+                        <td><input class="player3_upper" id="player3_sixes" type="number" min="0" max="30" step="6"></td>
+                        <td><input class="player4_upper" id="player4_sixes" type="number" min="0" max="30" step="6"></td>
                     </tr>
                     <tr>
                         <td>Summa</td>
-                        <td><input id="player1_sum" type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
+                        <td><input class="player1" id="player1_sum" type="number"></td>
+                        <td><input class="player2" id="player2_sum" type="number"></td>
+                        <td><input class="player3" id="player3_sum" type="number"></td>
+                        <td><input class="player4" id="player4_sum" type="number"></td>
                     </tr>
                     <tr>
                         <td>Bonus</td>
-                        <td><input id="player1_bonus" type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
+                        <td><input class="player1" id="player1_bonus" type="number"></td>
+                        <td><input class="player2" id="player2_bonus" type="number"></td>
+                        <td><input class="player3" id="player3_bonus" type="number"></td>
+                        <td><input class="player4" id="player4_bonus" type="number"></td>
                     </tr>
                     <tr>
                         <td>Ett par</td>
-                        <td><input id="player1_pairs" type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
+                        <td><input class="player1" id="player1_pairs" type="number"></td>
+                        <td><input class="player2" id="player2_pairs" type="number"></td>
+                        <td><input class="player3" id="player3_pairs" type="number"></td>
+                        <td><input class="player4" id="player4_pairs" type="number"></td>
                     </tr>
                     <tr>
                         <td>Två par</td>
-                        <td><input id="player1_twoPairs" type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
+                        <td><input class="player1" id="player1_twoPairs" type="number"></td>
+                        <td><input class="player2" id="player2_twoPairs" type="number"></td>
+                        <td><input class="player3" id="player3_twoPairs" type="number"></td>
+                        <td><input class="player4" id="player4_twoPairs" type="number"></td>
                     </tr>
                     <tr>
                         <td>Tretal</td>
-                        <td><input id="player1_3OfAKind" type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
+                        <td><input class="player1" id="player1_3OfAKind" type="number"></td>
+                        <td><input class="player2" id="player2_3OfAKind" type="number"></td>
+                        <td><input class="player3" id="player3_3OfAKind" type="number"></td>
+                        <td><input class="player4" id="player4_3OfAKind" type="number"></td>
                     </tr>
                     <tr>
                         <td>Fyrtal</td>
-                        <td><input id="player1_4OfAKind" type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
+                        <td><input class="player1" id="player1_4OfAKind" type="number"></td>
+                        <td><input class="player2" id="player2_4OfAKind" type="number"></td>
+                        <td><input class="player3" id="player3_4OfAKind" type="number"></td>
+                        <td><input class="player4" id="player4_4OfAKind" type="number"></td>
                     </tr>
                     <tr>
                         <td>Liten stege</td>
-                        <td><input id="player1_smallStraight" type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
+                        <td><input class="player1" id="player1_smallStraight" type="number"></td>
+                        <td><input class="player2" id="player2_smallStraight" type="number"></td>
+                        <td><input class="player3" id="player3_smallStraight" type="number"></td>
+                        <td><input class="player4" id="player4_smallStraight" type="number"></td>
                     </tr>
                     <tr>
                         <td>Stor stege</td>
-                        <td><input id="player1_bigStraight" type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
+                        <td><input class="player1" id="player1_bigStraight" type="number"></td>
+                        <td><input class="player2" id="player2_bigStraight" type="number"></td>
+                        <td><input class="player3" id="player3_bigStraight" type="number"></td>
+                        <td><input class="player4" id="player4_bigStraight" type="number"></td>
                     </tr>
                     <tr>
                         <td>Kåk</td>
-                        <td><input id="player1_house" type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
+                        <td><input class="player1" id="player1_house" type="number"></td>
+                        <td><input class="player2" id="player2_house" type="number"></td>
+                        <td><input class="player3" id="player3_house" type="number"></td>
+                        <td><input class="player4" id="player4_house" type="number"></td>
                     </tr>
                     <tr>
                         <td>Chans</td>
-                        <td><input id="player1_chance" type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
+                        <td><input class="player1" id="player1_chance" type="number"></td>
+                        <td><input class="player2" id="player2_chance" type="number"></td>
+                        <td><input class="player3" id="player3_chance" type="number"></td>
+                        <td><input class="player4" id="player4_chance" type="number"></td>
                     </tr>
                     <tr>
                         <td>Yatzy</td>
-                        <td><input id="player1_yatzy" type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
+                        <td><input class="player1" id="player1_yatzy" type="number"></td>
+                        <td><input class="player2" id="player2_yatzy" type="number"></td>
+                        <td><input class="player3" id="player3_yatzy" type="number"></td>
+                        <td><input class="player4" id="player4_yatzy" type="number"></td>
                     </tr>
                     <tr>
                         <td>Totalt</td>
-                        <td><input id="player1_total" type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
-                        <td><input type="number"></td>
+                        <td><input class="player1" id="player1_total" type="number"></td>
+                        <td><input class="player2" id="player2_total" type="number"></td>
+                        <td><input class="player3" id="player3_total" type="number"></td>
+                        <td><input class="player4" id="player4_total" type="number"></td>
                     </tr>
                 </table>
             </div>
@@ -206,6 +206,7 @@
                 <div class="row">
                     <div class="col">
                         <button id="throwDices">Kasta tärningar</button>
+                        <button id="doneButton">Klar</button>
                     </div>
                 </div>
                 <div>
@@ -255,6 +256,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <script src="js/scoreBoard.js"> </script>
+    <script>calculatePlayerUpper()</script>
 
 </body>
 
