--- a/yatzy2.html
+++ b/yatzy2.html
@@ -49,7 +49,7 @@
         <div class="row justify-content-center">
 
             <!-- Yatzy Table -->
-            <div class="col-lg-4">
+            <div class="col-lg-5 col-md-6 col-sm-12 d-flex justify-content-center">
                 <table>
                     <tr>
                         <th>Spelare</th>
@@ -187,25 +187,25 @@
                 </table>
             </div>
 
-            <div class="col-lg-4 diceArea align-items-stretch">
+            <div class="col-lg-4 col-md-6 col-sm-12 diceArea align-items-stretch">
                 <div class="row">
-                    <div class="col-lg-4 d-flex justify-content-center">
+                    <div class="dice col-lg-4 col-md-6 col-sm-6 d-flex justify-content-center">
                         <img src="img/dice2.png">
                         <input type="checkbox">
                     </div>
-                    <div class="col-lg-4 d-flex justify-content-center">
+                    <div class="dice col-lg-4 col-md-6 col-sm-6 d-flex justify-content-center">
                         <img src="img/dice3.png">
                         <input type="checkbox">
                     </div>
-                    <div class="col-lg-4 d-flex justify-content-center">
+                    <div class="dice col-lg-4 col-md-6 col-sm-6 d-flex justify-content-center">
                         <img src="img/dice4.png">
                         <input type="checkbox">
                     </div>
-                    <div class="col-lg-6 d-flex justify-content-center">
+                    <div class="dice col-lg-6 col-md-6 col-sm-6 d-flex justify-content-center">
                         <img src="img/dice5.png">
                         <input type="checkbox">
                     </div>
-                    <div class="col-lg-6 d-flex justify-content-center">
+                    <div class="dice col-lg-6 col-md-6 col-sm-6 d-flex justify-content-center">
                         <img src="img/dice6.png">
                         <input type="checkbox">
                     </div>
@@ -230,7 +230,7 @@
                 </div>
             </div>
 
-            <div class="col players">
+            <div class="col-lg-3 col-md-12 col-sm-12 players">
                 <div class="row">
                     <img src="https://randomuser.me/api/portraits/men/46.jpg">
                 </div>
