--- a/profile.html
+++ b/profile.html
@@ -3,26 +3,47 @@
 
 <head>
     <link href="css/style.css" rel="stylesheet">
-    <title>Profile-Yatta</title>
+    <title>Yatzy - Profil</title>
     <meta charset="UTF-8">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <nav>
-        <div class="topnav-left">
-            <img src="img/dice.jpg" alt="Yatzy logga">
-            <span class="navlinks">
-                <a href="starterpage.html">Start</a>
-                <a href="yatzy.html">Nytt spel</a>
-                <a href="results.html">Tidigare resultat</a>
-                <a class="active" href="profile.html">Min spelprofil</a>
-            </span>
-
-        </div>
-        <div class="topnav-right">
-            <a href="index.html"><button>Logga ut</button></a>
+    <!-- Navigation bar -->
+    <nav class="navbar navbar-dark navbar-expand-md justify-content-between sticky-top">
+        <img src="img/dice.jpg">
+        <a href="/" class="navbar-brand mr-0">Yatzy</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-nav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse collapse justify-content-between align-items-center w-100">
+            <ul class="navbar-nav mx-auto text-center">
+                <li class="nav-item">
+                    <a class="nav-link" href="starterpage.html">Start</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="yatzy.html">Nytt spel</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="results.html">Tidigare resultat</a>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav flex-row justify-content-center flex-nowrap">
+                <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-user-circle-o"></i> Min
+                        profil</span></a> </li>
+                <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa fa-sign-out"></i> Logga ut</a>
+                </li>
+            </ul>
         </div>
     </nav>
+
     </p>
     <h1>Charmander</h1>
     <img src="img/Charmy.gif" alt="Cutebun">
@@ -32,6 +53,15 @@
     </p>
     <h3>Games played:</h3>
     <p>2</p>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 
 </body>
 
