--- a/results.html
+++ b/results.html
@@ -2,29 +2,50 @@
 <html lang="sv">
 
 <head>
-    <link href="css/style BP.css" rel="stylesheet">
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Results</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="css/style.css">
+    <link href="css/style BP.css" rel="stylesheet">
 </head>
 
 <body>
-    <nav>
-
-        <div class="topnav-left">
-            <img src="img/dice.jpg" alt="Yatzy logga">
-            <span class="navlinks">
-                <a href="starterpage.html">Start</a>
-                <a href="yatzy.html">Nytt spel</a>
-                <a class="active" href="results.html">Tidigare resultat</a>
-                <a href="profile.html">Min spelprofil</a>
-            </span>
-
-        </div>
-        <div class="topnav-right">
-            <a href="index.html"><button>Logga ut</button></a>
+    <!-- Navigation bar -->
+    <nav class="navbar navbar-dark navbar-expand-md justify-content-between sticky-top">
+        <img src="img/dice.jpg">
+        <a href="/" class="navbar-brand mr-0">Yatzy</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-nav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse collapse justify-content-between align-items-center w-100">
+            <ul class="navbar-nav mx-auto text-center">
+                <li class="nav-item">
+                    <a class="nav-link" href="starterpage.html">Start</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="yatzy.html">Nytt spel</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Tidigare resultat</a>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav flex-row justify-content-center flex-nowrap">
+                <li class="nav-item"><a class="nav-link" href="profile.html"><i class="fa fa-user-circle-o"></i> Min
+                        profil</span></a> </li>
+                <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa fa-sign-out"></i> Logga ut</a>
+                </li>
+            </ul>
         </div>
     </nav>
+
     <h1>Resultat från tidigare omgångar</h1>
 
     <h2>Omgång 1</h2>
@@ -75,7 +96,14 @@
         </tr>
     </table>
 
-
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
