included function for upper and under calculations

--- a/yatzy.html
+++ b/yatzy.html
@@ -102,80 +102,80 @@
                     </tr>
                     <tr>
                         <td>Summa</td>
-                        <td><input class="player1_special" id="player1_sum" type="number"></td>
-                        <td><input class="player2_special" id="player2_sum" type="number"></td>
-                        <td><input class="player3_special" id="player3_sum" type="number"></td>
-                        <td><input class="player4_special" id="player4_sum" type="number"></td>
+                        <td><input class="player1_special" id="player1_sum" type="number" min="0"></td>
+                        <td><input class="player2_special" id="player2_sum" type="number" min="0"></td>
+                        <td><input class="player3_special" id="player3_sum" type="number" min="0"></td>
+                        <td><input class="player4_special" id="player4_sum" type="number" min="0"></td>
                     </tr>
                     <tr>
                         <td>Bonus</td>
-                        <td><input class="player1_special" id="player1_bonus" type="number"></td>
-                        <td><input class="player2_special" id="player2_bonus" type="number"></td>
-                        <td><input class="player3_special" id="player3_bonus" type="number"></td>
-                        <td><input class="player4_special" id="player4_bonus" type="number"></td>
+                        <td><input class="player1_special" id="player1_bonus" type="number" min="0"></td>
+                        <td><input class="player2_special" id="player2_bonus" type="number" min="0"></td>
+                        <td><input class="player3_special" id="player3_bonus" type="number" min="0"></td>
+                        <td><input class="player4_special" id="player4_bonus" type="number" min="0"></td>
                     </tr>
                     <tr>
                         <td>Ett par</td>
-                        <td><input class="player1" id="player1_pairs" type="number"></td>
-                        <td><input class="player2" id="player2_pairs" type="number"></td>
-                        <td><input class="player3" id="player3_pairs" type="number"></td>
-                        <td><input class="player4" id="player4_pairs" type="number"></td>
+                        <td><input class="player1" id="player1_pairs" type="number" min="0"></td>
+                        <td><input class="player2" id="player2_pairs" type="number" min="0"></td>
+                        <td><input class="player3" id="player3_pairs" type="number" min="0"></td>
+                        <td><input class="player4" id="player4_pairs" type="number" min="0"></td>
                     </tr>
                     <tr>
                         <td>Två par</td>
-                        <td><input class="player1" id="player1_twoPairs" type="number"></td>
-                        <td><input class="player2" id="player2_twoPairs" type="number"></td>
-                        <td><input class="player3" id="player3_twoPairs" type="number"></td>
-                        <td><input class="player4" id="player4_twoPairs" type="number"></td>
+                        <td><input class="player1" id="player1_twoPairs" type="number" min="0"></td>
+                        <td><input class="player2" id="player2_twoPairs" type="number" min="0"></td>
+                        <td><input class="player3" id="player3_twoPairs" type="number" min="0"></td>
+                        <td><input class="player4" id="player4_twoPairs" type="number" min="0"></td>
                     </tr>
                     <tr>
                         <td>Tretal</td>
-                        <td><input class="player1" id="player1_3OfAKind" type="number"></td>
-                        <td><input class="player2" id="player2_3OfAKind" type="number"></td>
-                        <td><input class="player3" id="player3_3OfAKind" type="number"></td>
-                        <td><input class="player4" id="player4_3OfAKind" type="number"></td>
+                        <td><input class="player1" id="player1_3OfAKind" type="number" min="0"></td>
+                        <td><input class="player2" id="player2_3OfAKind" type="number" min="0"></td>
+                        <td><input class="player3" id="player3_3OfAKind" type="number" min="0"></td>
+                        <td><input class="player4" id="player4_3OfAKind" type="number" min="0"></td>
                     </tr>
                     <tr>
                         <td>Fyrtal</td>
-                        <td><input class="player1" id="player1_4OfAKind" type="number"></td>
-                        <td><input class="player2" id="player2_4OfAKind" type="number"></td>
-                        <td><input class="player3" id="player3_4OfAKind" type="number"></td>
-                        <td><input class="player4" id="player4_4OfAKind" type="number"></td>
+                        <td><input class="player1" id="player1_4OfAKind" type="number" min="0"></td>
+                        <td><input class="player2" id="player2_4OfAKind" type="number" min="0"></td>
+                        <td><input class="player3" id="player3_4OfAKind" type="number" min="0"></td>
+                        <td><input class="player4" id="player4_4OfAKind" type="number" min="0"></td>
                     </tr>
                     <tr>
                         <td>Liten stege</td>
-                        <td><input class="player1" id="player1_smallStraight" type="number"></td>
-                        <td><input class="player2" id="player2_smallStraight" type="number"></td>
-                        <td><input class="player3" id="player3_smallStraight" type="number"></td>
-                        <td><input class="player4" id="player4_smallStraight" type="number"></td>
+                        <td><input class="player1" id="player1_smallStraight" type="number" min="0"></td>
+                        <td><input class="player2" id="player2_smallStraight" type="number" min="0"></td>
+                        <td><input class="player3" id="player3_smallStraight" type="number" min="0"></td>
+                        <td><input class="player4" id="player4_smallStraight" type="number" min="0"></td>
                     </tr>
                     <tr>
                         <td>Stor stege</td>
-                        <td><input class="player1" id="player1_bigStraight" type="number"></td>
-                        <td><input class="player2" id="player2_bigStraight" type="number"></td>
-                        <td><input class="player3" id="player3_bigStraight" type="number"></td>
-                        <td><input class="player4" id="player4_bigStraight" type="number"></td>
+                        <td><input class="player1" id="player1_bigStraight" type="number" min="0"></td>
+                        <td><input class="player2" id="player2_bigStraight" type="number" min="0"></td>
+                        <td><input class="player3" id="player3_bigStraight" type="number" min="0"></td>
+                        <td><input class="player4" id="player4_bigStraight" type="number" min="0"></td>
                     </tr>
                     <tr>
                         <td>Kåk</td>
-                        <td><input class="player1" id="player1_house" type="number"></td>
-                        <td><input class="player2" id="player2_house" type="number"></td>
-                        <td><input class="player3" id="player3_house" type="number"></td>
-                        <td><input class="player4" id="player4_house" type="number"></td>
+                        <td><input class="player1" id="player1_house" type="number" min="0"></td>
+                        <td><input class="player2" id="player2_house" type="number" min="0"></td>
+                        <td><input class="player3" id="player3_house" type="number" min="0"></td>
+                        <td><input class="player4" id="player4_house" type="number" min="0"></td>
                     </tr>
                     <tr>
                         <td>Chans</td>
-                        <td><input class="player1" id="player1_chance" type="number"></td>
-                        <td><input class="player2" id="player2_chance" type="number"></td>
-                        <td><input class="player3" id="player3_chance" type="number"></td>
-                        <td><input class="player4" id="player4_chance" type="number"></td>
+                        <td><input class="player1" id="player1_chance" type="number" min="0"></td>
+                        <td><input class="player2" id="player2_chance" type="number" min="0"></td>
+                        <td><input class="player3" id="player3_chance" type="number" min="0"></td>
+                        <td><input class="player4" id="player4_chance" type="number" min="0"></td>
                     </tr>
                     <tr>
                         <td>Yatzy</td>
-                        <td><input class="player1" id="player1_yatzy" type="number"></td>
-                        <td><input class="player2" id="player2_yatzy" type="number"></td>
-                        <td><input class="player3" id="player3_yatzy" type="number"></td>
-                        <td><input class="player4" id="player4_yatzy" type="number"></td>
+                        <td><input class="player1" id="player1_yatzy" type="number" min="0"></td>
+                        <td><input class="player2" id="player2_yatzy" type="number" min="0"></td>
+                        <td><input class="player3" id="player3_yatzy" type="number" min="0"></td>
+                        <td><input class="player4" id="player4_yatzy" type="number" min="0"></td>
                     </tr>
                     <tr>
                         <td>Totalt</td>
@@ -267,6 +267,7 @@
         crossorigin="anonymous"></script>
     <script src="js/scoreBoard.js"> </script>
     <script>calculatePlayerUpper()</script>
+    <script>calculatePlayerUnder()</script>
 
 </body>
 
