--- a/yatzy.html
+++ b/yatzy.html
@@ -61,7 +61,7 @@
                     <tr>
                         <td>Ettor</td>
                         <td><input class="player1_upper" id="player1_ones" type="number" min="0" max="5"></td>
-                        <td><input class="player2_upper"id="player2_ones" type="number" min="0" max="5"></td>
+                        <td><input class="player2_upper" id="player2_ones" type="number" min="0" max="5"></td>
                         <td><input class="player3_upper" id="player3_ones" type="number" min="0" max="5"></td>
                         <td><input class="player4_upper" id="player4_ones" type="number" min="0" max="5"></td>
                     </tr>
@@ -188,27 +188,57 @@
                 </table>
             </div>
 
-            <div class="col-lg-4 col-md-6 col-sm-12 diceArea align-items-stretch">
-                <div class="row">
-                    <div class="dice col-lg-4 col-md-6 col-sm-6 d-flex justify-content-center">
-                        <img src="img/dice2.png">
-                        <input type="checkbox">
+            <div class="col-lg-4 col-md-6 col-sm-12 diceArea">
+                <div class="row diceRow justify-content-center">
+                    <div class="dice col-lg-4 col-md-6 col-sm-4 col-4 d-flex justify-content-center">
+                        <div class="row">
+                            <div class="col-12 d-flex justify-content-center">
+                                <img src="img/dice2.png">
+                            </div>
+                            <div class="col-12 d-flex justify-content-center">
+                                <input type="checkbox">
+                            </div>
+                        </div>
                     </div>
-                    <div class="dice col-lg-4 col-md-6 col-sm-6 d-flex justify-content-center">
-                        <img src="img/dice3.png">
-                        <input type="checkbox">
+                    <div class="dice col-lg-4 col-md-6 col-sm-4 col-4 d-flex justify-content-center">
+                            <div class="row">
+                                    <div class="col-12 d-flex justify-content-center">
+                                        <img src="img/dice3.png">
+                                    </div>
+                                    <div class="col-12 d-flex justify-content-center">
+                                        <input type="checkbox">
+                                    </div>
+                                </div>
                     </div>
-                    <div class="dice col-lg-4 col-md-6 col-sm-6 d-flex justify-content-center">
-                        <img src="img/dice4.png">
-                        <input type="checkbox">
+                    <div class="dice col-lg-4 col-md-6 col-sm-4 col-4 d-flex justify-content-center">
+                            <div class="row">
+                                    <div class="col-12 d-flex justify-content-center">
+                                        <img src="img/dice4.png">
+                                    </div>
+                                    <div class="col-12 d-flex justify-content-center">
+                                        <input type="checkbox">
+                                    </div>
+                                </div>
                     </div>
-                    <div class="dice col-lg-6 col-md-6 col-sm-6 d-flex justify-content-center">
-                        <img src="img/dice5.png">
-                        <input type="checkbox">
+                    <div class="dice col-lg-6 col-md-6 col-sm-6 col-4 d-flex justify-content-center">
+                            <div class="row">
+                                    <div class="col-12 d-flex justify-content-center">
+                                        <img src="img/dice5.png">
+                                    </div>
+                                    <div class="col-12 d-flex justify-content-center">
+                                        <input type="checkbox">
+                                    </div>
+                                </div>
                     </div>
-                    <div class="dice col-lg-6 col-md-6 col-sm-6 d-flex justify-content-center">
-                        <img src="img/dice6.png">
-                        <input type="checkbox">
+                    <div class="dice col-lg-6 col-md-6 col-sm-6 col-4 d-flex justify-content-center">
+                            <div class="row">
+                                    <div class="col-12 d-flex justify-content-center">
+                                        <img src="img/dice6.png">
+                                    </div>
+                                    <div class="col-12 d-flex justify-content-center">
+                                        <input type="checkbox">
+                                    </div>
+                                </div>
                     </div>
                 </div>
                 <div class="row">
@@ -266,8 +296,12 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <script src="js/scoreBoard.js"> </script>
-    <script>calculatePlayerUpper()</script>
-    <script>calculatePlayerUnder()</script>
+    <script>
+        calculatePlayerUpper()
+    </script>
+    <script>
+        calculatePlayerUnder()
+    </script>
 
 </body>
 
