--- a/yatzy.html
+++ b/yatzy.html
@@ -144,24 +144,24 @@
                     </tr>
                     <tr>
                         <td>Liten stege</td>
-                        <td><input class="player1" id="player1_smallStraight" type="number" min="0"></td>
-                        <td><input class="player2" id="player2_smallStraight" type="number" min="0"></td>
-                        <td><input class="player3" id="player3_smallStraight" type="number" min="0"></td>
-                        <td><input class="player4" id="player4_smallStraight" type="number" min="0"></td>
+                        <td><input class="player1" id="player1_smallStraight" type="number" min="0" max="30" step="30"></td>
+                        <td><input class="player2" id="player2_smallStraight" type="number" min="0" max="30" step="30"></td>
+                        <td><input class="player3" id="player3_smallStraight" type="number" min="0" max="30" step="30"></td>
+                        <td><input class="player4" id="player4_smallStraight" type="number" min="0" max="30" step="30"></td>
                     </tr>
                     <tr>
                         <td>Stor stege</td>
-                        <td><input class="player1" id="player1_bigStraight" type="number" min="0"></td>
-                        <td><input class="player2" id="player2_bigStraight" type="number" min="0"></td>
-                        <td><input class="player3" id="player3_bigStraight" type="number" min="0"></td>
-                        <td><input class="player4" id="player4_bigStraight" type="number" min="0"></td>
+                        <td><input class="player1" id="player1_bigStraight" type="number" min="0" max="40" step="40"></td>
+                        <td><input class="player2" id="player2_bigStraight" type="number" min="0" max="40" step="40"></td>
+                        <td><input class="player3" id="player3_bigStraight" type="number" min="0" max="40" step="40"></td>
+                        <td><input class="player4" id="player4_bigStraight" type="number" min="0" max="40" step="40"></td>
                     </tr>
                     <tr>
                         <td>Kåk</td>
-                        <td><input class="player1" id="player1_house" type="number" min="0"></td>
-                        <td><input class="player2" id="player2_house" type="number" min="0"></td>
-                        <td><input class="player3" id="player3_house" type="number" min="0"></td>
-                        <td><input class="player4" id="player4_house" type="number" min="0"></td>
+                        <td><input class="player1" id="player1_house" type="number" min="0" max="25" step="25"></td>
+                        <td><input class="player2" id="player2_house" type="number" min="0" max="25" step="25"></td>
+                        <td><input class="player3" id="player3_house" type="number" min="0" max="25" step="25"></td>
+                        <td><input class="player4" id="player4_house" type="number" min="0" max="25" step="25"></td>
                     </tr>
                     <tr>
                         <td>Chans</td>
@@ -172,14 +172,13 @@
                     </tr>
                     <tr>
                         <td>Yatzy</td>
-                        <td><input class="player1" id="player1_yatzy" type="number" min="0"></td>
-                        <td><input class="player2" id="player2_yatzy" type="number" min="0"></td>
-                        <td><input class="player3" id="player3_yatzy" type="number" min="0"></td>
-                        <td><input class="player4" id="player4_yatzy" type="number" min="0"></td>
+                        <td><input class="player1" id="player1_yatzy" type="number" min="0" max="50" step="50"></td>
+                        <td><input class="player2" id="player2_yatzy" type="number" min="0" max="50" step="50"></td>
+                        <td><input class="player3" id="player3_yatzy" type="number" min="0" max="50" step="50"></td>
+                        <td><input class="player4" id="player4_yatzy" type="number" min="0" max="50" step="50"></td>
                     </tr>
                     <tr>
                         <td>Totalt</td>
-                        <!-- Är det okej att ha samma classnamn som id? -->
                         <td><input class="player1_total" id="player1_total" type="number"></td>
                         <td><input class="player2_total" id="player2_total" type="number"></td>
                         <td><input class="player3_total" id="player3_total" type="number"></td>
@@ -201,44 +200,44 @@
                         </div>
                     </div>
                     <div class="dice col-lg-4 col-md-6 col-sm-4 col-4 d-flex justify-content-center">
-                            <div class="row">
-                                    <div class="col-12 d-flex justify-content-center">
-                                        <img src="img/dice3.png">
-                                    </div>
-                                    <div class="col-12 d-flex justify-content-center">
-                                        <input type="checkbox">
-                                    </div>
-                                </div>
+                        <div class="row">
+                            <div class="col-12 d-flex justify-content-center">
+                                <img src="img/dice3.png">
+                            </div>
+                            <div class="col-12 d-flex justify-content-center">
+                                <input type="checkbox">
+                            </div>
+                        </div>
                     </div>
                     <div class="dice col-lg-4 col-md-6 col-sm-4 col-4 d-flex justify-content-center">
-                            <div class="row">
-                                    <div class="col-12 d-flex justify-content-center">
-                                        <img src="img/dice4.png">
-                                    </div>
-                                    <div class="col-12 d-flex justify-content-center">
-                                        <input type="checkbox">
-                                    </div>
-                                </div>
+                        <div class="row">
+                            <div class="col-12 d-flex justify-content-center">
+                                <img src="img/dice4.png">
+                            </div>
+                            <div class="col-12 d-flex justify-content-center">
+                                <input type="checkbox">
+                            </div>
+                        </div>
                     </div>
                     <div class="dice col-lg-6 col-md-6 col-sm-6 col-4 d-flex justify-content-center">
-                            <div class="row">
-                                    <div class="col-12 d-flex justify-content-center">
-                                        <img src="img/dice5.png">
-                                    </div>
-                                    <div class="col-12 d-flex justify-content-center">
-                                        <input type="checkbox">
-                                    </div>
-                                </div>
+                        <div class="row">
+                            <div class="col-12 d-flex justify-content-center">
+                                <img src="img/dice5.png">
+                            </div>
+                            <div class="col-12 d-flex justify-content-center">
+                                <input type="checkbox">
+                            </div>
+                        </div>
                     </div>
                     <div class="dice col-lg-6 col-md-6 col-sm-6 col-4 d-flex justify-content-center">
-                            <div class="row">
-                                    <div class="col-12 d-flex justify-content-center">
-                                        <img src="img/dice6.png">
-                                    </div>
-                                    <div class="col-12 d-flex justify-content-center">
-                                        <input type="checkbox">
-                                    </div>
-                                </div>
+                        <div class="row">
+                            <div class="col-12 d-flex justify-content-center">
+                                <img src="img/dice6.png">
+                            </div>
+                            <div class="col-12 d-flex justify-content-center">
+                                <input type="checkbox">
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
